<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.core.common.android.Status" />

        <variable
            name="viewModel"
            type="com.core.features.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:refreshing="@{safeUnbox(viewModel.users.status == Status.LOADING)}"
            tools:itemCount="4"
            tools:listitem="@layout/user_list_item_view">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="60dp"
                tools:itemCount="5"
                tools:listitem="@layout/user_list_item_view" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/info_empty_view"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:tint="@color/lightGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/swipe_refresh_layout"
            app:layout_constraintVertical_bias="0.41000003"
            app:srcCompat="@drawable/ic_info_outline_black_24dp"
            bind:visibleGone="@{safeUnbox(viewModel.users.status == Status.SUCCESS) &amp;&amp; safeUnbox(viewModel.users.data.isEmpty()) || safeUnbox(viewModel.users.status == Status.ERROR) &amp;&amp; safeUnbox(viewModel.users.data.isEmpty())}"
            tools:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info_empty_text_view"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_empty_results"
            app:layout_constraintEnd_toEndOf="@+id/info_empty_view"
            app:layout_constraintStart_toStartOf="@+id/info_empty_view"
            app:layout_constraintTop_toBottomOf="@+id/info_empty_view"
            bind:visibleGone="@{safeUnbox(viewModel.users.status == Status.SUCCESS) &amp;&amp; safeUnbox(viewModel.users.data.isEmpty()) || safeUnbox(viewModel.users.status == Status.ERROR) &amp;&amp; safeUnbox(viewModel.users.data.isEmpty())}"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>