...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                bind:image="@{item.thumbnail}" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/removeView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:padding="6dp"
                android:tint="@color/lightGray"
                app:layout_constraintBottom_toBottomOf="parent"
...
